# torrentfile

./: .deepsource.toml  .editorconfig  .gitignore  .hasher_build  .markdownlint.json  .markdownlintrc  .prospector.yml  .pylintrc  .setup.cfg  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  bencode.py  cobertura.xml  corbertura.xml  coverage.xml  debugencoder.py  file1  filter_lst.json  formated.json  hasher_build.py  metafile.py.patch  mkdocs.yml  package.json  pyproject.toml  requirements.txt  rootv2.json  scraper.py  setup.cfg  setup.py  start.py  temp1.txt  test.py  torrent_creator.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 3.7.yml  codacy-analysis.yml  codacy-coverage-reporter.yml  linux_ci.yml  mac_ci.yml  main.yml  matrixflow.yml  pyworkflow.yml  windows_ci.yml  workflow.yml
c/: Makefile  hasher.c  hasher.h  hasherhybrid.c  hasherhybrid.h  hasherv2.c  hasherv2.h  sha.c  sha.h  sha1.c  sha256.c  sha256.h
docs/: .buildinfo  .coverage-tmp.html  404.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  search.json  searchindex.js  setup.html  sitemap.xml  tests.html  torrentfile.html
docs/API/: index.html
docs/Apache2/: index.html
docs/CLI/: index.html
docs/Commands/: index.html
docs/Edit/: index.html
docs/Examples/: index.html
docs/HasherAPI/: index.html
docs/Hybrid/: index.html
docs/Interactive/: index.html
docs/LGPLv3/: index.html
docs/LICENSE/: index.html
docs/Overview/: index.html
docs/Source/: index.html
docs/TorrentAPI/: index.html
docs/TorrentFile/: index.html
docs/TorrentFileV2/: index.html
docs/Usage/: index.html
docs/Utils/: index.html
docs/_api/: index.html
docs/_static/: documentation_options.js
docs/about/: index.html
docs/api/: index.html
docs/changelog/: index.html
docs/checker/: index.html
docs/cli/: index.html
docs/commands/: index.html
docs/coverage/: covindex.html  d_1bc82e0ab2fcb2ec___init___py.html  d_1bc82e0ab2fcb2ec___main___py.html  d_1bc82e0ab2fcb2ec_cli_py.html  d_1bc82e0ab2fcb2ec_commands_py.html  d_1bc82e0ab2fcb2ec_edit_py.html  d_1bc82e0ab2fcb2ec_hasher_py.html  d_1bc82e0ab2fcb2ec_interactive_py.html  d_1bc82e0ab2fcb2ec_mixins_py.html  d_1bc82e0ab2fcb2ec_rebuild_py.html  d_1bc82e0ab2fcb2ec_recheck_py.html  d_1bc82e0ab2fcb2ec_torrent_py.html  d_1bc82e0ab2fcb2ec_utils_py.html  d_1bc82e0ab2fcb2ec_version_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_commands_py.html  d_a44f0ac069e85531_test_edit_py.html  d_a44f0ac069e85531_test_interactive_py.html  d_a44f0ac069e85531_test_rebuild_py.html  d_a44f0ac069e85531_test_recheck_py.html  d_a44f0ac069e85531_test_torrent_py.html  d_a44f0ac069e85531_test_utils_py.html  index.html  status.json
docs/doctrees/: index.doctree  modules.doctree  setup.doctree  tests.doctree  torrentfile.doctree
docs/edit/: index.html
docs/examples/: index.html
docs/genindex/: index.html
docs/hasher/: index.html
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  setup.html  torrentfile.html
docs/htmlcov/: d_1bc82e0ab2fcb2ec___init___py.html  d_1bc82e0ab2fcb2ec___main___py.html  d_1bc82e0ab2fcb2ec_cli_py.html  d_1bc82e0ab2fcb2ec_commands_py.html  d_1bc82e0ab2fcb2ec_edit_py.html  d_1bc82e0ab2fcb2ec_hasher_py.html  d_1bc82e0ab2fcb2ec_interactive_py.html  d_1bc82e0ab2fcb2ec_mixins_py.html  d_1bc82e0ab2fcb2ec_rebuild_py.html  d_1bc82e0ab2fcb2ec_recheck_py.html  d_1bc82e0ab2fcb2ec_torrent_py.html  d_1bc82e0ab2fcb2ec_utils_py.html  d_1bc82e0ab2fcb2ec_version_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_commands_py.html  d_a44f0ac069e85531_test_edit_py.html  d_a44f0ac069e85531_test_interactive_py.html  d_a44f0ac069e85531_test_rebuild_py.html  d_a44f0ac069e85531_test_recheck_py.html  d_a44f0ac069e85531_test_torrent_py.html  d_a44f0ac069e85531_test_utils_py.html  index.html  status.json
docs/htmlcover/: d_1bc82e0ab2fcb2ec___init___py.html  d_1bc82e0ab2fcb2ec___main___py.html  d_1bc82e0ab2fcb2ec_cli_py.html  d_1bc82e0ab2fcb2ec_commands_py.html  d_1bc82e0ab2fcb2ec_edit_py.html  d_1bc82e0ab2fcb2ec_hasher_py.html  d_1bc82e0ab2fcb2ec_interactive_py.html  d_1bc82e0ab2fcb2ec_mixins_py.html  d_1bc82e0ab2fcb2ec_rebuild_py.html  d_1bc82e0ab2fcb2ec_recheck_py.html  d_1bc82e0ab2fcb2ec_torrent_py.html  d_1bc82e0ab2fcb2ec_utils_py.html  d_1bc82e0ab2fcb2ec_version_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_commands_py.html  d_a44f0ac069e85531_test_edit_py.html  d_a44f0ac069e85531_test_interactive_py.html  d_a44f0ac069e85531_test_rebuild_py.html  d_a44f0ac069e85531_test_recheck_py.html  d_a44f0ac069e85531_test_torrent_py.html  d_a44f0ac069e85531_test_utils_py.html  index.html  status.json
site/: API.md  Apache2.md  CLI.md  Commands.md  Edit.md  HasherAPI.md  Interactive.md  LGPLv3.md  Usage.md  Utils.md  api.md  changelog.md  cli.md  examples.md  hasher.md  index.md  man.md  overview.md  recheck.md  source.md  torrent.md  usage.md
tests/: __init__.py  context.py  requirements.txt  test_checker.py  test_cli.py  test_commands.py  test_context.py  test_edit.py  test_file_tree.py  test_funcs.py  test_hasher.py  test_interactive.py  test_main.py  test_meta.py  test_metafile.py  test_metav2.py  test_progress.py  test_rebuild.py  test_recheck.py  test_torrent.py  test_torrentfile.py  test_utils.py
torrent_decoder/: classes.py  config.py  dir_locater.py  funcs.py  scripts.py
torrent_standard/: bencode.py  creator.py  funcs.py  metafile.py  piecelength.py  traverse.py
torrentfile/: __init__.py  __main__.py  bencode.py  checker.py  cli.py  commands.py  creator.py  edit.py  exceptions.py  feeder.py  file_tree.py  hasher.py  hybrid.py  interactive.py  metabase.py  metafile.py  metafile2.py  metafileV2.py  mixins.py  piecelength.py  progress.py  rebuild.py  recheck.py  torrent.py  torrentfile.py  traverse.py  utils.py  version.py  window.py
(+59 files in other folders)
