[metadata]
name = torrentfile
author = alexpdev
author_email = alexpdev@pm.me
description = Create Bittorent v1, v2 and hybrid meta files.
license = Apache Software License
version = attr: torrentfile.version.VERSION
long_description = file: ./README.md
dependencies = pyben
requires_python = >=3.6
url = https://github.com/alexpdev/torrenfile
keywords =
    Bittorrent
    torrent
    bittorrent-metafiles
    CLI
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
install_requires =
    pyben
    setuptools
    wheel
include_package_data = True
packages =
    find:
