[metadata]
name = torrentfile
keywords = Bittorrent, torrent, bittorrent-metafiles, CLI
classifiers =
    Environment :: Console
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexpdev/torrentfile
author = alexpdev
author_email = alexpdev@pm.me


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pyben>="0.3.1"
setup_requires =
    setuptools
    wheel

[options.package_data]
exclude =
    .env
    tests
    venv
    docs
